--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
 
 html {
   font-size: 62.5%;
-
 }
 
 body {
@@ -16,25 +15,24 @@ body {
 }
 
 .subtitle {
-  font-size: 2.8rem;
-  font-weight: 400;
-  color: #5D5D5D;
-  line-height: 1.6;
+  font-size: 2.6rem;
+  font-weight: 700;
+  color: #000;
+  line-height: 1.2;
   display: block;
-
 }
 
 h1 {
-  color: #3A5185;
-  font-size: 2.0rem;
+  color: #000;
+  font-size: 2.8rem;
   font-weight: 700;
-  line-height: 1.2;
+  line-height: 1.6;
   margin: 0;
   text-align: center;
 }
 
 h2 {
-  color: #3A5185;
+  color: #000;
   font-size: 2.4rem;
   font-weight: 700;
   line-height: 1.2;
@@ -43,18 +41,24 @@ h2 {
 }
 
 h3 {
-  color: #0c1a1b;
-  font-size: 2.0rem;
-  font-weight: 700;
+  color: #979797;
+  font-size: 2. 0 rem;
+  font-weight: 400;
   line-height: 1.2;
   margin: 0;
   text-align: center;
 }
 
+.h3 {
+  color: #ff7c17;
+  font-size: 2. 0 rem;
+  font-weight: 400;
+}
+
 h4,
 .h4 {
-  color: #3A8285;
-  font-size: 2.4rem;
+  color: #3a8285;
+  font-size: 2.4 rem;
   font-weight: 700;
   line-height: 1.2;
   margin: 0;
@@ -68,31 +72,29 @@ img {
   text-align: center;
 }
 
-
 .button {
   display: inline-block;
-  background-color: #CBFF88;
+  background-color: #cbff88;
   color: #000;
   font-weight: 400;
   padding: 10px 20px;
   border-radius: 5px;
-  border-bottom: 2px solid #B6CFFF;
+  border-bottom: 2px solid #b6cfff;
+
   /* width of the border, type, color */
   transition: 0.2s opacity;
   text-decoration: none;
   align-items: center;
-  
 }
 
 .button:visited {
-  color: #3A5185;
+  color: #3a5185;
 }
 
 .button:hover,
 .button:focus {
   opacity: 0.7;
   transition-duration: 0.8s;
-  
 }
 
 .button:active {
@@ -100,22 +102,20 @@ img {
 }
 
 a {
-  
-  color:#3A5185;
+  color: #3a5185;
 }
 
 a:visited {
-  
   color: #bfbfbf;
 }
 
 a:hover,
 a:focus {
-  color:#3f3f3f;
+  color: #3f3f3f;
 }
 
 a:active {
-  color: #CBFF88;
+  color: #cbff88;
 }
 
 /* ===================
@@ -123,7 +123,6 @@ HEADER Styling
 ==================== */
 header {
   background-color: #131313f4;
-
   padding: 10px 0;
   box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.6);
   -webkit-box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.6);
@@ -132,72 +131,66 @@ header {
   width: 100%;
 }
 
-
 a.logo {
   text-decoration: none;
   font-weight: 700;
   font-size: 2rem;
 }
 
-nav>ul {
+nav > ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  line-height: 0px;
+  line-height: 0 px;
   display: flex;
 }
 
-
-nav>ul>li {
+nav > ul > li {
   display: inline-block;
   line-height: 1.5;
 }
 
-nav>ul>li>a {
+nav > ul > li > a {
   text-transform: uppercase;
   font-weight: 700;
   color: #bfbfbf;
   text-decoration: none;
   display: block;
-  padding: 0.5em 0.5em;
+  padding: 0.5em;
 }
 
-nav>ul>li>a:visited {
+nav > ul > li > a:visited {
   color: #bfbfbf;
-
 }
 
 nav .button:hover,
-nav>ul>li>a:hover{
-  color:  #e4e4e4;
-
+nav > ul > li > a:hover {
+  color: #e4e4e4;
 }
 
-nav .active{
-  color: #CBFF88 !important;
+nav .active {
+  color: #cbff88 !important;
   text-decoration: underline;
   text-underline-offset: 5px;
 }
 
-.icon svg{
+.icon svg {
   width: 2em;
-  fill: #CBFF88;
+  fill: #cbff88;
 }
-.navtoggle{
+
+.navtoggle {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  }
-
-
-#myNavtoggle{
-  
 }
+
 .navtoggle li:not(:last-child) {
   display: none;
 }
 
-.navtoggle, .navtoggle.responsive {
+.navtoggle,
+.navtoggle.responsive {
   position: relative;
 }
 
@@ -205,27 +198,23 @@ nav .active{
   position: absolute;
   right: 0;
   top: 2px;
- 
 }
 
-nav{
+nav {
   display: inline-block;
   width: 100%;
 }
 
-
-
-.navtoggle.responsive li{
+.navtoggle.responsive li {
   display: block;
 }
 
-.navtoggle.responsive ul{
+.navtoggle.responsive ul {
   display: flex;
   flex-direction: column;
   gap: 1em;
   margin-top: 1em;
 }
-
 
 .account::before {
   font: var(--fa-font-solid);
@@ -268,9 +257,14 @@ nav{
 
 /* an example rule targeting any element with the "custom-icon" class to render a custom icon (uploaded to a kit) */
 .custom-icon::before {
-  font-family: 'Font Awesome Kit'; /* note that you need to use "font-family" for custom icons */
-  content: '\[CUSTOM*ICON_UNICODE]'; /* replace with custom icon's unicode value \*/
+  font-family: 'Font Awesome Kit';
+
+  /* note that you need to use "font-family" for custom icons */
+  content: '\[CUSTOM*ICON_UNICODE]';
 }
+
+/* replace with custom icon's unicode value \*
+
 
 
 
@@ -281,7 +275,6 @@ Layout Styling
 main {
   /* padding-top: 120px; */
   padding-top: 84px;
-
 }
 
 .container {
@@ -290,17 +283,11 @@ main {
   display: flex;
   flex-direction: column;
   margin-inline: auto;
-
 }
 
 section {
   padding-block: 6rem;
 }
-
-
-
-
-
 
 /* ===================
 Social-Footer
@@ -331,8 +318,8 @@ Social-Footer
 
 footer .container {
   align-items: center;
-  text-align: center;
-  border-top: 2px solid #000;
+  text-align: center; /* border-top: 2px solid #000;
+  */
   padding-top: 6rem;
   padding-bottom: 3rem;
 }
@@ -340,16 +327,13 @@ footer .container {
 /* ===================
 Header-logo
 ==================== */
-.logo-style{
+.logo-style {
   text-decoration: none;
   font-size: 2.5em;
   font-weight: 400;
-  color:#efefef;
+  color: #efefef;
   font-family: "Cookie";
-
 }
-
-
 
 /* ===================
 project page
@@ -380,15 +364,16 @@ project page
 #overview {
   padding-block-end: 0;
 }
+
 #overview .container {
   gap: 4rem;
 }
+
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
 
 @media only screen and (min-width: 640px) {
-
   #hero span {
     display: block;
   }
@@ -396,40 +381,33 @@ Medium devices (640px and larger)
   .navtoggle li:not(:last-child) {
     display: inline-block;
   }
+
   .navtoggle li:last-child {
     display: none;
   }
+
   .navtoggle {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
   }
-  nav{
-    width: auto;
 
+  nav {
+    width: auto;
   }
 }
 
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
-@media only screen and (min-width: 1024px) {
-
-}
+@media only screen and (min-width: 1024px) {}
 
 /* ==============================
 X-large devices (1440px or larger)
 ================================= */
-@media only screen and (min-width: 1440px) {
-  
-}
+@media only screen and (min-width: 1440px) {}
 
 /* ==============================
 Extra-large devices (1920px or larger)
 ================================= */
-@media only screen and (min-width: 1920px) {
-
-}
-
-
-
+@media only screen and (min-width: 1920px) {}
